<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_34">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_phone_varification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.358" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_titleOtp"
            style="@style/TitleHeading"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/tv_titleVarification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhone"
            style="@style/tvTitleNormal"
            android:layout_marginTop="@dimen/dimen_48"
            android:text="@string/tv_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleOtp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@drawable/draw_corner_gray"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_5"
            android:text="@string/tv_description"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:digits="2"
                android:ems="3"
                android:gravity="center"
                android:inputType="number"
                android:padding="@dimen/dimen_10"
                android:text="+91" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:inputType="number"
                android:maxLength="10"
                android:padding="@dimen/dimen_10" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btGetOtp"
            style="@style/ButtonPink"
            android:layout_marginTop="@dimen/dimen_44"
            android:text="@string/bt_get_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llNumber"  />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llSignupDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/tv_description"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.626"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btGetOtp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_signin_back"
                android:textSize="@dimen/font_size_20" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:gravity="right"
                android:text="@string/bt_signin"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_20"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>