<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/draw_corner_card_white"
    android:padding="@dimen/dimen_34"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/dimen_200"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".ui.fragment.SplashFragment">

    <!--<androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/fyp_pocket" />-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btSwipeUp"
            android:layout_width="@dimen/dimen_48"
            android:layout_height="@dimen/dimen_48"
            android:background="@drawable/draw_circle"
            android:padding="@dimen/dimen_5"
            android:src="@drawable/ic_arrow_up_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSwipeUpDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/tv_swipeup_des"
            android:textSize="@dimen/font_size_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btSwipeUp"
            tools:src="@tools:sample/avatars" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutFirst">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/tv_title"
            android:textSize="@dimen/font_size_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSwipeUpDes"
            tools:src="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogoSmall"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_margin="24dp"
            android:src="@drawable/img_fyp_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSignup"
            style="@style/ButtonPink"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:text="@string/bt_signup"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoSmall" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignupDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16"
            android:gravity="center"
            android:text="@string/tv_description"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btSignup" />

        <LinearLayout
            android:id="@+id/llSignupDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:text="@string/tv_description"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignupDes">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSigninDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="center"
                android:text="@string/tv_signin_des"
                android:textSize="@dimen/font_size_20" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:gravity="right"
                android:text="@string/bt_signin"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_20"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>